<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content" android:padding="4dp">

    <TextView
            android:text="@string/mesorregiao_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/messoregiao_id"
            android:textColor="@color/colorAccent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@+id/mesorregiao_nome" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="26dp"
    />
    <TextView
            android:text="@string/mesorregiao_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:id="@+id/mesorregiao_nome"
            app:layout_constraintStart_toEndOf="@+id/messoregiao_id" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="4dp"/>
    <TextView
            android:text="@string/mesorregiao_uf_sigla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:id="@+id/mesorregiao_uf_sigla"
            app:layout_constraintHorizontal_chainStyle="packed" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/messoregiao_id"
            app:layout_constraintEnd_toStartOf="@+id/mesorregiao_uf_nome" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="26dp"/>
    <TextView
            android:text="@string/mesorregiao_uf_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:id="@+id/mesorregiao_uf_nome" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/mesorregiao_nome"
            app:layout_constraintStart_toEndOf="@+id/mesorregiao_uf_sigla" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="4dp"/>
    <TextView
            android:text="@string/mesorregiao_uf_regiao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:id="@+id/mesorregiao_uf_regiao"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/mesorregiao_uf_sigla" app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>