<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/linearLayout">
        <TextView
                android:text="@string/mesorregiao_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" android:layout_marginStart="44dp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/messoregiao_id"
                android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/textView7"
                android:layout_marginBottom="12dp" app:layout_constraintBottom_toTopOf="@+id/textView7"/>
        <TextView
                android:text="@string/mesorregiao_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/textView4" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mesorregiao_nome"
                app:layout_constraintStart_toStartOf="@+id/messoregiao_id" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/messoregiao_id"/>
        <TextView
                android:text="@string/mesorregiao_uf_sigla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                app:layout_constraintStart_toStartOf="@+id/textView7" android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7"/>
        <TextView
                android:text="@string/mesorregiao_uf_regiao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/textView9" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/textView9"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mesorregiao_uf_sigla"
                app:layout_constraintStart_toStartOf="@+id/mesorregiao_nome" android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/mesorregiao_nome"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mesorregiao_uf_regiao"
                app:layout_constraintStart_toStartOf="@+id/mesorregiao_uf_sigla" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/mesorregiao_uf_sigla"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>